--- a/src/app/transaction-modal/transaction-modal.component.html
+++ b/src/app/transaction-modal/transaction-modal.component.html
@@ -1,23 +1,40 @@
-
 <mat-dialog-content>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
 
-      
         <ng-container matColumnDef="currency">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">{{element.currency}}</td>
-          </ng-container>
-      
-          <ng-container matColumnDef="transactionAmount">
+        </ng-container>
+
+        <ng-container matColumnDef="transactionAmount">
             <th mat-header-cell *matHeaderCellDef>Amount To Deposit/Withdraw</th>
-            <td mat-cell *matCellDef="let element">  
-                INPUT BOX
+            <td mat-cell *matCellDef="let element; let i = index">
+                <form class="example-form">
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <input type="number" matInput [(ngModel)]="dataSource[i].transactionAmount" name="Amount" placeholder="Amount">
+                        <div *ngIf="isInvalidAmount(element.currency, element.transactionAmount)">
+                            <mat-error >
+                                Invalid Amount
+                            </mat-error>
+                        </div>
+                    </mat-form-field>
+                </form>
             </td>
-          </ng-container>
-    
-      
-      
+        </ng-container>
+        
+        <ng-container matColumnDef="currentAmount">
+            <th mat-header-cell *matHeaderCellDef>&nbsp;&nbsp;&nbsp; Current Amount &nbsp;&nbsp;</th>
+            <td mat-cell *matCellDef="let element">{{element.currentAmount}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="valueInSilver">
+            <th mat-header-cell *matHeaderCellDef>&nbsp;&nbsp; Value In Silver &nbsp;&nbsp;</th>
+            <td mat-cell *matCellDef="let element">{{element.valueInSilver}}</td>
+        </ng-container>
+
+
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+    </table>
 </mat-dialog-content>
