--- a/src/app/bag-parent/bag-parent.component.css
+++ b/src/app/bag-parent/bag-parent.component.css
@@ -4,8 +4,17 @@
     height: 100vh;
 }
 
-.dice-loading{
-    height: 200;
+.centerDie{
+    display: flex;
+    margin: auto;
+}
+
+
+.title{
+    display: flex;
+    margin: auto;
+    height: 25%;
+    width: 25%;
 }
 
 
