--- a/src/app/transaction-modal/transaction-modal.component.html
+++ b/src/app/transaction-modal/transaction-modal.component.html
@@ -24,7 +24,7 @@
         
         <ng-container matColumnDef="currentAmount">
             <th mat-header-cell *matHeaderCellDef>&nbsp;&nbsp;&nbsp; Current Amount &nbsp;&nbsp;</th>
-            <td mat-cell *matCellDef="let element">{{element.currentAmount}}</td>
+            <td mat-cell *matCellDef="let element">{{getTotalForCurrencyType(element.currency)}}</td>
         </ng-container>
 
         <ng-container matColumnDef="valueInSilver">
@@ -37,4 +37,14 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+    <br><br>
+    <div class="textBoxTitle">
+    Reason For Deposit/Withdraw
+    </div>
+    <input class="textBox" type="text" [(ngModel)]="description">
+
+    <br><br>
+
+    <button mat-raised-button class="centerButton" (click)="completeTransaction()">Complete Transaction</button>
 </mat-dialog-content>
