--- a/src/app/bag-parent/money/money.component.html
+++ b/src/app/bag-parent/money/money.component.html
@@ -1,4 +1,4 @@
-<mat-card class="moneyCard">
+<mat-card class="mat-elevation-z0">
     <div class="moneyText">
         <div class="bigMoneyText">
             Total Value in Silver &nbsp;&nbsp; 
@@ -21,6 +21,5 @@
         <img src="../../../assets/gold.png" class="moneyIcon">
         Gold &nbsp;
         {{ currencyTransaction?.goldTotal }} &nbsp;&nbsp;
-        <br>
     </div>
 </mat-card>
