--- a/src/app/transaction-modal/transaction-modal.component.html
+++ b/src/app/transaction-modal/transaction-modal.component.html
@@ -1,4 +1,9 @@
 <mat-dialog-content>
+    <div [ngClass]="{'withdraw-label': type === 'Withdraw', 'deposit-label': type === 'Deposit'}">
+        <br>
+        {{type}}
+    </div>
+    <br>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
 
         <ng-container matColumnDef="currency">
@@ -7,17 +12,24 @@
         </ng-container>
 
         <ng-container matColumnDef="transactionAmount">
-            <th mat-header-cell *matHeaderCellDef>Amount To Deposit/Withdraw</th>
+            <th mat-header-cell *matHeaderCellDef>Amount To {{type}}</th>
             <td mat-cell *matCellDef="let element; let i = index">
-                <form class="example-form">
-                    <mat-form-field class="example-full-width" appearance="fill">
-                        <input type="number" matInput [(ngModel)]="dataSource[i].transactionAmount" name="Amount" placeholder="Amount">
-                        <div *ngIf="isInvalidAmount(element.currency, element.transactionAmount)">
-                            <mat-error >
-                                Invalid Amount
-                            </mat-error>
-                        </div>
-                    </mat-form-field>
+                <form>
+                    <div style="font-size: 11px">
+                        <mat-form-field appearance="fill">
+                            <input type="number" 
+                            matInput 
+                            min="0"
+                            [(ngModel)]="dataSource[i].transactionAmount" 
+                            name="Amount" 
+                            placeholder="Amount">
+                            <div *ngIf="isInvalidAmount(element.currency, element.transactionAmount)">
+                                <mat-error >
+                                    Invalid Amount
+                                </mat-error>
+                            </div>
+                        </mat-form-field>
+                    </div>
                 </form>
             </td>
         </ng-container>
@@ -40,11 +52,28 @@
 
     <br><br>
     <div class="textBoxTitle">
-    Reason For Deposit/Withdraw
+    Reason For {{type}}
     </div>
-    <input class="textBox" type="text" [(ngModel)]="description">
+    <div *ngIf="description == undefined">
+        <mat-error >
+            Invalid Amount
+        </mat-error>
+    </div>
+   
+    <textarea 
+    class="textBox"  
+    [(ngModel)]="description" 
+    cols="40" 
+    rows="4"></textarea>
 
     <br><br>
 
-    <button mat-raised-button class="centerButton" (click)="completeTransaction()">Complete Transaction</button>
+    <button 
+    mat-raised-button 
+    color="light-blue"
+    class="centerButton" 
+    (click)="completeTransaction()">
+        Complete {{type}}
+    </button>
+
 </mat-dialog-content>
