--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -1,9 +1,10 @@
-.user-container{
+.user-dropdown{
 margin: auto;
-width: 40%;
+width: 175px;
 text-align: center;
 font-family: 'Lobster', cursive;
 }
+
 .user-label{
 margin: auto;
 font-size: 30px;
@@ -16,3 +17,7 @@ margin: auto;
 font-size: 13px;
 text-align: center;
 }
+
+:host::ng-deep .mat-select-placeholder {
+    color: white;
+ } 
