--- a/src/app/transaction-modal/transaction-modal.component.html
+++ b/src/app/transaction-modal/transaction-modal.component.html
@@ -15,11 +15,13 @@
             <th mat-header-cell *matHeaderCellDef>Amount To {{type}}</th>
             <td mat-cell *matCellDef="let element; let i = index">
                 <form>
-                    <div style="font-size: 11px">
+                    <div style="font-size: 13px">
                         <mat-form-field appearance="fill">
-                            <input type="number" 
+                            <input 
+                            numeric 
+                            type="number"
+                            (focusout)="onFocusOutEvent($event)"  
                             matInput 
-                            min="0"
                             [(ngModel)]="dataSource[i].transactionAmount" 
                             name="Amount" 
                             placeholder="Amount">
@@ -50,14 +52,17 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
+    <div *ngIf="isFieldsEmpty && submitAttempted" class="warning emptyTransaction">
+        Cannot Submit Empty Transaction
+    </div>
+
     <br><br>
     <div class="textBoxTitle">
     Reason For {{type}}
-    </div>
-    <div *ngIf="description == undefined">
-        <mat-error >
-            Invalid Amount
-        </mat-error>
+        <span *ngIf="description == '' && submitAttempted" class="warning">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Please Enter A Reason
+        </span>
     </div>
    
     <textarea 
@@ -67,13 +72,23 @@
     rows="4"></textarea>
 
     <br><br>
-
-    <button 
-    mat-raised-button 
-    color="light-blue"
-    class="centerButton" 
-    (click)="completeTransaction()">
-        Complete {{type}}
-    </button>
+ 
+    <div class="button-row">
+        <button 
+        mat-raised-button 
+        color="light-blue"
+        class="centerButton" 
+        (click)="completeTransaction()">
+            Complete {{type}}
+        </button>
+    
+        <button 
+        mat-raised-button 
+        color="light-blue"
+        class="centerButton" 
+        (click)="closeDialog()">
+            Cancel
+        </button>
+    </div>
 
 </mat-dialog-content>
