--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -18,6 +18,10 @@ font-size: 13px;
 text-align: center;
 }
 
+.blue{
+    color: lightskyblue;
+}
+
 :host::ng-deep .mat-select-placeholder {
     color: white;
  } 
