--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,13 @@ body {  margin: 0;
     display: block;
     margin: 8px 0;
  }
+
+ .moneyIcon{
+   height: 20px;
+   margin-left: 7px;
+}
+
+.smallMoneyIcon{
+  height: 12px;
+  margin-left: 7px;
+}
