--- a/src/app/transaction-modal/transaction-modal.component.html
+++ b/src/app/transaction-modal/transaction-modal.component.html
@@ -64,7 +64,7 @@
     <span class="br"> </span>
     <div class="textBoxTitle">
     Reason For {{type}}
-        <span *ngIf="description == '' && submitAttempted" class="warning">
+        <span *ngIf="description == '' && submitAttempted" class="orange">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Please Enter A Reason
         </span>
