--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<div class="user-label" *ngIf="!selectedUser">
+<div class="bigLobsterText" *ngIf="!selectedUser">
     Choose Your Character to Continue
 </div>
 <div class="user-dropdown" *ngIf="!selectedUser">
@@ -13,7 +13,7 @@
 <div *ngIf="selectedUser" class="user-label-small">
     Currently Logged In As:
 </div>
-<div *ngIf="selectedUser" class="user-label">
+<div *ngIf="selectedUser" class="bigLobsterText">
     <span class="br"> </span>
     {{selectedUser}}
 </div>
