--- a/src/styles.css
+++ b/src/styles.css
@@ -2,22 +2,59 @@
 
 html, body { height: 100%; }
 body {  margin: 0; 
-        font-family: 'Lobster', cursive;
-        color: white;
-    }
+      font-family: 'Lobster', cursive;
+      color: white;
+   }
 
-    
- .br {
-    display: block;
-    margin: 8px 0;
- }
+   
+.br {
+   display: block;
+   margin: 8px 0;
+}
 
- .moneyIcon{
-   height: 20px;
-   margin-left: 7px;
+.moneyIcon{
+height: 20px;
+margin-left: 7px;
 }
 
 .smallMoneyIcon{
-  height: 12px;
-  margin-left: 7px;
+height: 12px;
+margin-left: 7px;
+}
+
+.bigMoneyIcon{
+height: 30px;
+margin-left: 7px;
+}
+
+.bigLobsterText{
+margin: auto;
+text-align: center;
+font-family: 'Lobster', cursive;
+font-size: 30px;
+}
+
+.lobsterText{
+margin: auto;
+text-align: center;
+font-family: 'Lobster', cursive;
+font-size: 20px;
+}
+
+.mat-light-blue {
+background-color: #4699c7;
+}
+
+.light-blue {
+color: #4699c7; 
+}
+
+.orange {
+color: orangered;
+}
+
+
+.button-container {
+margin: auto;
+text-align: center;
 }
