added total value column to monetary transaction table

--- a/src/app/monetary-history/monetary-history.component.css
+++ b/src/app/monetary-history/monetary-history.component.css
@@ -34,6 +34,11 @@ width: 80px !important;
 text-align: center !important;
 }
 
+.mat-column-totalValueInSilver {
+    width: 100px !important;
+    text-align: center !important;   
+}
+
 .mat-column-createdBy { 
 width: 180px !important;
 text-align: center !important;
