--- a/src/app/monetary-history/monetary-history.component.html
+++ b/src/app/monetary-history/monetary-history.component.html
@@ -44,6 +44,11 @@
             <td mat-cell *matCellDef="let element">{{getTransactionSymbol(element.type)}}{{element.goldDeposited}}</td>
         </ng-container>
         
+        <ng-container matColumnDef="totalValueInSilver">
+            <th mat-header-cell *matHeaderCellDef>Transaction Value in Silver</th>
+            <td mat-cell *matCellDef="let element">{{getTransactionSymbol(element.type)}}{{getTotalValueInSilver(element) | number:'1.2-2'}}</td>
+        </ng-container>
+        
         <ng-container matColumnDef="createdBy">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Created By</th>
             <td mat-cell *matCellDef="let element">{{element.createdBy}}</td>
