reorganized app, began work on item tables

--- a/src/app/bag-parent/bag-parent.component.html
+++ b/src/app/bag-parent/bag-parent.component.html
@@ -23,5 +23,9 @@
             </div>
             <br>
         </div>
+        <br><br><br>
+        <div *ngIf="userComponent?.selectedUser !== undefined" class="moneyCard">
+            <app-item-container user="this.userComponent?.selectedUser"></app-item-container>
+        </div>
     </div>
 </div>
