--- a/src/app/coin/transaction-modal/transaction-modal.component.html
+++ b/src/app/coin/transaction-modal/transaction-modal.component.html
@@ -89,7 +89,7 @@
     
         <button 
         mat-raised-button 
-        color="light-blue"
+        color="orange"
         class="centerButton" 
         (click)="closeDialog()">
             Cancel
