--- a/src/app/item/item-table/item-table.component.css
+++ b/src/app/item/item-table/item-table.component.css
@@ -1,10 +1,15 @@
-.mat-column-type { 
-width: 80px !important;
-text-align: center !important;
+.mat-column-icon { 
+width: 50px !important;
+text-align: left !important;
 }
-
+    
 .mat-column-name { 
 width: 200px !important;
+text-align: left !important;
+}
+
+.mat-column-type { 
+width: 120px !important;
 text-align: center !important;
 }
 
@@ -18,8 +23,8 @@ width: 80px !important;
 text-align: center !important;
 }
 
-.mat-column-quantity { 
-width: 80px !important;
+.mat-column-withdraw { 
+width: 100px !important;
 text-align: center !important;
 }
 
@@ -28,9 +33,18 @@ height: 12px !important;
 text-align: center !important;
 }
 
-/* .mat-column {
+.mat-column {
 border: none;
-} */
+}
+
+.mat-table {
+    margin: auto;
+}
+
+.mat-paginator {
+    display: flex;
+    justify-content: center !important;
+}
 
 :host ::ng-deep .mat-sort-header-container {
 display: flex;
@@ -40,4 +54,34 @@ justify-content: center;
 ::ng-deep .mat-sort-header-container:not(.mat-sort-header-sorted) .mat-sort-header-arrow {
 opacity: 0.54 !important;
 transform: translateY(0px) !important;
+}
+
+.item-icon {
+    height: 30px;
+margin-left: 7px;
+    vertical-align: middle
+}
+
+.uncommon {
+    color: rgb(56, 219, 6);
+}
+
+.rare {
+    color: rgb(36, 36, 255);
+}
+
+.very-rare {
+    color: blueviolet;
+}
+
+.legendary {
+    color: orange;
+}
+
+.artifact {
+    color: peru;
+}
+
+.small-button {
+    height: 35px;
 }
