--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,10 @@ margin: auto;
 text-align: center;
 }
 
+.button-row {
+   display: flex;
+ }
+
 /* MAT TAB STYLING */
 app-item-container .mat-tab-label.mat-tab-label-active {
    text-align: center;
