--- a/src/app/item/item-container/item-container.component.html
+++ b/src/app/item/item-container/item-container.component.html
@@ -1,6 +1,6 @@
 <br>
 <mat-tab-group mat-align-tabs="center">
-    <mat-tab label="Item Bank">
+    <mat-tab label="Party Item Bank">
         <br>
         <div class="button-container">
             <button mat-raised-button color="light-blue" (click)="openDepositDialog()">Deposit Item</button>
