--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -1,7 +1,7 @@
     <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z0">
 
         <ng-container matColumnDef="icon">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+            <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
                 <img [src]='"../../../assets/"+getItemIcon(element.type)+".jpg"' class="item-icon">
             </td>
