--- a/src/app/item/item-container/item-container.component.html
+++ b/src/app/item/item-container/item-container.component.html
@@ -7,7 +7,7 @@
             &nbsp;&nbsp;&nbsp;
             <button mat-raised-button color="light-blue" (click)="openHistoryDialog()">Transaction History</button>
         </div>
-        <br>
+        <br><span class="br"></span>
         <div class="center-table">
             <app-item-table [items]="bankItems"></app-item-table>
         </div>
