--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -1,3 +1,5 @@
+    <app-filter-menu></app-filter-menu>
+    
     <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z0">
 
         <ng-container matColumnDef="icon">
