--- a/src/app/coin/transaction-modal/transaction-modal.component.html
+++ b/src/app/coin/transaction-modal/transaction-modal.component.html
@@ -38,7 +38,7 @@
         </ng-container>
         
         <ng-container matColumnDef="currentAmount">
-            <th mat-header-cell *matHeaderCellDef>&nbsp;&nbsp;&nbsp; Current Amount &nbsp;&nbsp;</th>
+            <th mat-header-cell *matHeaderCellDef>&nbsp;&nbsp;&nbsp; Available Amount &nbsp;&nbsp;</th>
             <td mat-cell *matCellDef="let element">{{getTotalForCurrencyType(element.currency)}}</td>
         </ng-container>
 
