--- a/src/app/bag-parent/bag-parent.component.css
+++ b/src/app/bag-parent/bag-parent.component.css
@@ -3,6 +3,7 @@
     background-repeat: repeat;
     background-attachment: fixed;
     height: 100vh;
+    min-height: 1800px;
     overflow-x: scroll;
 }
 
