--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -1,4 +1,7 @@
-    <app-filter-menu></app-filter-menu>
+    <app-filter-menu 
+    (typeEvent)="updateTypeFilter($event)" 
+    (rarityEvent)="updateRarityFilter($event)">
+    </app-filter-menu>
     
     <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z0">
 
@@ -34,17 +37,26 @@
         </ng-container>
 
         <ng-container matColumnDef="withdraw">
-            <th mat-header-cell *matHeaderCellDef>Move Item</th>
+            <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
                 <div class="button-container">
-                    <button class="small-button" mat-raised-button color="light-blue" (click)="moveItem()">Withdraw Item</button>
+                    <button class="small-button" mat-raised-button color="light-blue" (click)="moveItem()">Withdraw</button>
+                </div>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="delete">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <div class="button-container">
+                    <button class="small-button" mat-raised-button color="orange" (click)="deleteItem()">Delete</button>
                 </div>
             </td>
         </ng-container>
 
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
 
     <mat-paginator [pageSizeOptions]="[10, 20, 40]" showFirstLastButtons></mat-paginator>
