bug fix and notified user if item filters are active

--- a/src/app/bag-parent/bag-parent.component.css
+++ b/src/app/bag-parent/bag-parent.component.css
@@ -4,7 +4,7 @@
     background-attachment: fixed;
     height: 100vh;
     min-height: 1800px;
-    overflow-x: scroll;
+    overflow-x: visible;
 }
 
 .centerDie{
