--- a/src/app/item/filter-menu/filter-menu.component.html
+++ b/src/app/item/filter-menu/filter-menu.component.html
@@ -1,7 +1,14 @@
 <div class="menu-container">
     <button class="menu-right" mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-        Filter Items
-        <mat-icon>filter_list</mat-icon>
+        <span *ngIf="areFiltersDeactivated()">
+            Filter Items
+            <mat-icon>filter_list</mat-icon>
+        </span>
+        <span *ngIf="!areFiltersDeactivated()" class="light-blue">
+            Filters Active
+            <mat-icon>filter_list</mat-icon>
+        </span>
+        
     </button>
     <mat-menu #menu="matMenu" yPosition="above" xPosition="before" class="mat-elevation-z20">
         <span (click)="$event.stopPropagation()" (keydown)="$event.stopPropagation()">
