--- a/src/app/coin/monetary-history/monetary-history.component.html
+++ b/src/app/coin/monetary-history/monetary-history.component.html
@@ -48,27 +48,27 @@
         
         <ng-container matColumnDef="platinumDeposited">
             <th mat-header-cell *matHeaderCellDef>Platinum Transacted</th>
-            <td mat-cell *matCellDef="let element">{{getTransactionSymbol(element.type)}}{{element.platinumDeposited}}</td>
+            <td mat-cell *matCellDef="let element">{{getTransactionSymbol(element.type)}}{{element.platinumDeposited | number}}</td>
         </ng-container>
         
         <ng-container matColumnDef="electrumDeposited">
             <th mat-header-cell *matHeaderCellDef>Electrum Transacted</th>
-            <td mat-cell *matCellDef="let element">{{getTransactionSymbol(element.type)}}{{element.electrumDeposited}}</td>
+            <td mat-cell *matCellDef="let element">{{getTransactionSymbol(element.type)}}{{element.electrumDeposited | number}}</td>
         </ng-container>
         
         <ng-container matColumnDef="silverDeposited">
             <th mat-header-cell *matHeaderCellDef>Silver Transacted</th>
-            <td mat-cell *matCellDef="let element">{{getTransactionSymbol(element.type)}}{{element.silverDeposited}}</td>
+            <td mat-cell *matCellDef="let element">{{getTransactionSymbol(element.type)}}{{element.silverDeposited | number}}</td>
         </ng-container>
         
         <ng-container matColumnDef="copperDeposited">
             <th mat-header-cell *matHeaderCellDef>Copper Transacted</th>
-            <td mat-cell *matCellDef="let element">{{getTransactionSymbol(element.type)}}{{element.copperDeposited}}</td>
+            <td mat-cell *matCellDef="let element">{{getTransactionSymbol(element.type)}}{{element.copperDeposited | number}}</td>
         </ng-container>
         
         <ng-container matColumnDef="goldDeposited">
             <th mat-header-cell *matHeaderCellDef>Gold Transacted</th>
-            <td mat-cell *matCellDef="let element">{{getTransactionSymbol(element.type)}}{{element.goldDeposited}}</td>
+            <td mat-cell *matCellDef="let element">{{getTransactionSymbol(element.type)}}{{element.goldDeposited | number}}</td>
         </ng-container>
         
         <ng-container matColumnDef="totalValueInSilver">
