--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -33,7 +33,7 @@
 
         <ng-container matColumnDef="cost">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Cost in SP</th>
-            <td mat-cell *matCellDef="let element">{{element.cost}}</td>
+            <td mat-cell *matCellDef="let element">{{element.cost | number}}</td>
         </ng-container>
 
         <ng-container matColumnDef="withdraw">
